--- a/style.css
+++ b/style.css
@@ -8,5 +8,8 @@ body {
   margin: 0;
 }
 section#featured-property {
-  align-content: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
