--- a/style.css
+++ b/style.css
@@ -13,3 +13,9 @@ section#featured-property {
   margin-right: auto;
   width: 50%;
 }
+
+a {
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: grey;
+}
