--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ section#featured-property {
   width: 50%;
 }
 
-.nav a {
+nav a {
   padding-left: 10px;
   padding-right: 10px;
   background-color: grey;
