--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ section#featured-property {
 }
 
 nav a {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
   padding-left: 10px;
   padding-right: 10px;
   background-color: grey;
