--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ section#featured-property {
 }
 
 nav a {
-  display: none;
+  display: inline-grid;;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
