--- a/style.css
+++ b/style.css
@@ -15,9 +15,7 @@ section#featured-property {
 }
 
 nav a {
-  display: inline;
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center;
   padding-left: 10px;
   padding-right: 10px;
   background-color: grey;
