--- a/style.css
+++ b/style.css
@@ -23,7 +23,5 @@ nav a {
 
 figcaption {
   font-size: 10px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  text-align: center;
 }
