Automatically backed up by Learn

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ section#featured-property {
 }
 
 nav a {
+  display: inline;
   text-align: center;
   padding-left: 10px;
   padding-right: 10px;
