--- a/style.css
+++ b/style.css
@@ -7,12 +7,11 @@ body {
   height: 100%;
   margin: 0;
 }
-section#featured-property {
+img {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  width: 800px;
 }
 
 nav a {
@@ -26,6 +25,7 @@ nav a {
 figcaption {
   font-size: 10px;
   text-align: center;
+  width: 800px;
 }
 section#details {
   display: block;
